tests/examples/failing/TopLevelSemis.hs.bad
{-# LANGUAGE StandaloneDeriving #-}
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE TemplateHaskell #-}
module Network.MoHWS.HTTP.Header  where

x = 1


;


data Foo = Foo


;


instance Monoid CIRB where
  mempty = CIRB mempty mempty mempty mempty


;


deriving instance Eq (GenTickish 'TickishPassCore)


;


transferCodingStr DeflateTransferCoding  = "deflate"


;


getContentType :: Int


;


type MyMaybe :: Type -> Type


;


default (Integer)


;


foreign import ccall unsafe "isDoubleFinite" isDoubleFinite :: Double -> Int


;


{-# DEPRECATED foo2 [] #-}


;


{-# ANN module FromA #-}


;


{-# RULES "myrule2" id f = f #-}


;


$foo


;


type role Representational representational


;


getContentType = 1

-- Note: skipping DocD, only generated in haddock mode

